adjust links for rw.rs

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Bautista's personal website</title>
-    <link href="/index.css" rel="stylesheet" type="text/css" media="all">
-    <link href="/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
-    <link href="/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="top" href="/" title="Job Bautista's personal website">
+    <link href="/~job/index.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/~job/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
+    <link href="/~job/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
+    <link rel="icon" type="image/x-icon" href="/~job/favicon.ico">
+    <link rel="top" href="/~job/" title="Job Bautista's personal website">
   </head>
   <body>
     <header>
-      <script src="/nav.js"></script>
-      <noscript><iframe id="top" name="top" src="/nav.html"></iframe></noscript>
+      <script src="/~job/nav.js"></script>
+      <noscript><iframe id="top" name="top" src="/~job/nav.html"></iframe></noscript>
     </header>
     <hr />
     <h1>Welcome to my Website!</h1>
@@ -24,13 +24,13 @@
       I contribute to some free software projects. I developed several XUL add-ons for <a href="https://www.palemoon.org">Pale Moon</a> and other <a href="http://thereisonlyxul.org">UXP</a> applications. I maintain the <a href="https://git.devuan.org/devuan/iwd">iwd package in Devuan</a>. I also proofread some translations in the <a href="https://www.palemoon.org">Pale Moon</a> project. <s>I am currently working on Tagalog translations of <a href="https://fluxbb.org">FluxBB</a> and <a href="https://postmill.xyz">Postmill</a>.</s> (Currently on hold for now)
       </p>
       <p>
-      This is my <a href="/publickey.asc">PGP public key</a>. Key ID is 555BDA3FFEBADC6E7AC050ED27838CCEB86216C4.
+      This is my <a href="/~job/publickey.asc">PGP public key</a>. Key ID is 555BDA3FFEBADC6E7AC050ED27838CCEB86216C4.
       </p>
     <hr />
     <footer>
-      <script src="/footer.js"></script>
-      <noscript><div><iframe id="bottom" name="bottom" src="/footer.html"></iframe></div></noscript>
-      <a id="navfix" href="/nav.html">navigation if your browser has faulty iframe support</a>
+      <script src="/~job/footer.js"></script>
+      <noscript><div><iframe id="bottom" name="bottom" src="/~job/footer.html"></iframe></div></noscript>
+      <a id="navfix" href="/~job/nav.html">navigation if your browser has faulty iframe support</a>
     </footer>
   </body>
 </html>
