--- a/nav.html
+++ b/nav.html
@@ -23,11 +23,11 @@
  </head>
  <body>
   <nav>
-   <a class="navi" rel="top" href="/">Home</a>
-   <a class="navi" href="/writings">Writings</a>
-   <a class="navi" href="/wheretofindme.html">Where to find me</a>
-   <a class="navi" href="/contact.html">Contact</a>
+   <a class="navi" rel="top" href="/~job/">Home</a>
+   <a class="navi" href="/~job/writings">Writings</a>
+   <a class="navi" href="/~job/wheretofindme.html">Where to find me</a>
+   <a class="navi" href="/~job/contact.html">Contact</a>
   </nav>
-  <p style="text-align:center;"><a style="font-size:10px;color:#000" href="/writings/darkmode.html">Do you know that you can toggle dark mode on this website?</a></p>
+  <p style="text-align:center;"><a style="font-size:10px;color:#000" href="/~job/writings/darkmode.html">Do you know that you can toggle dark mode on this website?</a></p>
  </body>
 </html>
