--- a/wheretofindme.html
+++ b/wheretofindme.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Where to find Job Bautista</title>
-    <link href="/index.css" rel="stylesheet" type="text/css" media="all">
-    <link href="/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
-    <link href="/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
-    <link rel="top" href="/" title="Job Bautista's personal website">
-    <link rel="up" href="../" title="Job Bautista's personal website">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link href="/~job/index.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/~job/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
+    <link href="/~job/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
+    <link rel="top" href="/~job/" title="Job Bautista's personal website">
+    <link rel="up" href="/~job/" title="Job Bautista's personal website">
+    <link rel="icon" type="image/x-icon" href="/~job/favicon.ico">
   </head>
   <body>
     <header>
-      <script src="/nav.js"></script>
-      <noscript><iframe id="top" name="top" src="/nav.html"></iframe></noscript>
+      <script src="/~job/nav.js"></script>
+      <noscript><iframe id="top" name="top" src="/~job/nav.html"></iframe></noscript>
     </header>
     <hr />
       <h1>Where to find me</h1>
@@ -49,15 +49,15 @@
             <li><a href="https://wikirby.com/wiki/User:Pandakekok9">WiKirby account</a>
             <li><a href="https://dev1galaxy.org/profile.php?id=6010">Dev1Galaxy forum account</a>
             <li><a href="https://forum.palemoon.org/memberlist.php?mode=viewprofile&u=21058">Pale Moon forum account</a>
-            <li><a href="https://everything2.com/user/pandakekok9">everything2 account</a> (see some of my best writeups <a href="/writings/everything2">here</a>)
+            <li><a href="https://everything2.com/user/pandakekok9">everything2 account</a> (see some of my best writeups <a href="/~job/writings/everything2">here</a>)
           </ul>
         <h2>Encryption and signing</h2>
-        <p>If you want to make sure that I'm the one writing the email and not some other impostor, as well as encrypt your message, you can use this <a href="/publickey.asc">PGP public key</a>. Key ID is 555BDA3FFEBADC6E7AC050ED27838CCEB86216C4. If you're going to encrypt your message, make sure to send your public key as well, so that I can send back an encrypted response.</p>
+        <p>If you want to make sure that I'm the one writing the email and not some other impostor, as well as encrypt your message, you can use this <a href="/~job/publickey.asc">PGP public key</a>. Key ID is 555BDA3FFEBADC6E7AC050ED27838CCEB86216C4. If you're going to encrypt your message, make sure to send your public key as well, so that I can send back an encrypted response.</p>
     <hr />
     <footer>
-      <script src="/footer.js"></script>
-      <noscript><div><iframe id="bottom" name="bottom" src="/footer.html"></iframe></div></noscript>
-      <a id="navfix" href="/nav.html">navigation if your browser has faulty iframe support</a>
+      <script src="/~job/footer.js"></script>
+      <noscript><div><iframe id="bottom" name="bottom" src="/~job/footer.html"></iframe></div></noscript>
+      <a id="navfix" href="/~job/nav.html">navigation if your browser has faulty iframe support</a>
     </footer>
   </body>
 </html>
