--- a/writings/everything2/idealwifimall.html
+++ b/writings/everything2/idealwifimall.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ideal Wi-Fi Mall - Job Bautista</title>
-    <link href="/index.css" rel="stylesheet" type="text/css" media="all">
-    <link href="/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
-    <link href="/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="top" href="/" title="Job Bautista's personal website">
+    <link href="/~job/index.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/~job/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
+    <link href="/~job/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
+    <link rel="icon" type="image/x-icon" href="/~job/favicon.ico">
+    <link rel="top" href="/~job/" title="Job Bautista's personal website">
     <link rel="up" href="./" title=">Some of my best writeups in Everything2 - Job Bautista">
   </head>
   <body>
     <header>
-      <script src="/nav.js"></script>
-      <noscript><iframe id="top" name="top" src="/nav.html"></iframe></noscript>
+      <script src="/~job/nav.js"></script>
+      <noscript><iframe id="top" name="top" src="/~job/nav.html"></iframe></noscript>
     </header>
     <hr />
     <h1>Ideal Wi-Fi Mall</h1>
@@ -39,13 +39,13 @@
     </ul>
     <p>Good luck with your Wi-Fi mall, <a href="https://everything2.com/title/capitalist">capitalist</a>.</p>
     
-    <p><a rel="up" href="/writings/everything2">Back to my e2 writeups</a></p>
+    <p><a rel="up" href="/~job/writings/everything2">Back to my e2 writeups</a></p>
     <hr />
     <footer>
       <a href="https://everything2.com/user/pandakekok9/writeups/Ideal+Wi-Fi+mall" title="Originally published in Everything2"><img src="everything2_logo.png" alt="Originally published in Everything2" /></a><br />
-      <script src="/footer.js"></script>
-      <noscript><div><iframe id="bottom" name="bottom" src="/footer.html"></iframe></div></noscript>
-      <a id="navfix" href="/nav.html">navigation if your browser has faulty iframe support</a>
+      <script src="/~job/footer.js"></script>
+      <noscript><div><iframe id="bottom" name="bottom" src="/~job/footer.html"></iframe></div></noscript>
+      <a id="navfix" href="/~job/nav.html">navigation if your browser has faulty iframe support</a>
     </footer>
   </body>
 </html>
