--- a/writings/everything2/index.html
+++ b/writings/everything2/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Some of my best writeups in Everything2 - Job Bautista</title>
-    <link href="/index.css" rel="stylesheet" type="text/css" media="all">
-    <link href="/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
-    <link href="/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="top" href="/" title="Job Bautista's personal website">
-    <link rel="up" href="/writings" title="Job Bautista's writings">
+    <link href="/~job/index.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/~job/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
+    <link href="/~job/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
+    <link rel="icon" type="image/x-icon" href="/~job/favicon.ico">
+    <link rel="top" href="/~job/" title="Job Bautista's personal website">
+    <link rel="up" href="/~job/writings" title="Job Bautista's writings">
   </head>
   <body>
     <header>
-      <script src="/nav.js"></script>
-      <noscript><iframe id="top" name="top" src="/nav.html"></iframe></noscript>
+      <script src="/~job/nav.js"></script>
+      <noscript><iframe id="top" name="top" src="/~job/nav.html"></iframe></noscript>
     </header>
     <hr />
     <h1>Some of my best writeups in Everything2</h1>
@@ -24,9 +24,9 @@
       <p><a href="martsangbayan.html">Martsa ng Bayan</a> - a review of the 1980s <a href="https://en.wikipedia.org/wiki/Martial_law_in_the_Philippines">martial law</a> song</p>
     <hr />
     <footer>
-      <script src="/footer.js"></script>
-      <noscript><div><iframe id="bottom" name="bottom" src="/footer.html"></iframe></div></noscript>
-      <a id="navfix" href="/nav.html">navigation if your browser has faulty iframe support</a>
+      <script src="/~job/footer.js"></script>
+      <noscript><div><iframe id="bottom" name="bottom" src="/~job/footer.html"></iframe></div></noscript>
+      <a id="navfix" href="/~job/nav.html">navigation if your browser has faulty iframe support</a>
     </footer>
   </body>
 </html>
