--- a/writings/sineprogresibo.html
+++ b/writings/sineprogresibo.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SineProgresibo, a torrent of Filipino progressive movies - Job Bautista</title>
-    <link href="/index.css" rel="stylesheet" type="text/css" media="all">
-    <link href="/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
-    <link href="/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
-    <link rel="top" href="/" title="Job Bautista's personal website">
+    <link href="/~job/index.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/~job/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
+    <link href="/~job/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
+    <link rel="top" href="/~job/" title="Job Bautista's personal website">
     <link rel="up" href="./" title="Job Bautista's writings">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/~job/favicon.ico">
   </head>
   <body>
     <header>
-      <script src="/nav.js"></script>
-      <noscript><iframe id="top" name="top" src="/nav.html"></iframe></noscript>
+      <script src="/~job/nav.js"></script>
+      <noscript><iframe id="top" name="top" src="/~job/nav.html"></iframe></noscript>
     </header>
     <hr />
     <h1>SineProgresibo, a torrent of progressive movies</h1>
@@ -26,7 +26,7 @@
      <li>1976 - Sakada (dir. Behn Cervantes).m4v</li>
      <li>1984 - Sister Stella L. (dir. Mike de Leon).mp4</li>
      <li>1988 - A Rustling of Leaves (Dir. Nettie Wild).avi</li>
-     <li>1989 - Orapronobis (Dir. Lino Brocka).mp4 (<a href="https://0x0.st/-Adx.mp4">Alternative non-torrent download link</a>, if it's down, <a href="/contact.html">contact me</a>!)</li>
+     <li>1989 - Orapronobis (Dir. Lino Brocka).mp4 (<a href="https://0x0.st/-Adx.mp4">Alternative non-torrent download link</a>, if it's down, <a href="/~job/contact.html">contact me</a>!)</li>
      <li>2002 - Dekada 70 (Dir. Chito S. Roño) .mp4</li>
      <li>2004 - Red Saga (Dir. Kiri Dalena).mp4 (<a href="https://0x0.st/-Adg.mp4">Alternative non-torrent download link</a>)</li>
      <li>2005 - Sa Ngalan ng Tubo (Tudla Prod.) .mpg (<a href="https://0x0.st/-AdE.mpg">Alternative non-torrent download link</a>)</li>
@@ -45,9 +45,9 @@
     <p>Download this <a href="https://0x0.st/-Adv.torrent">torrent file</a> or use this <a href="magnet:?xt=urn:btih:3a7ae37d1b439a5d02818062c0d6fd7e6bdde504&dn=SineProgresibo">magnet link</a> and start torrenting using your favorite torrent client. Don't forget to seed to at least 2.0 ratio after downloading. Remember, when you share data, <a href="http://libcom.org/files/downloading-communism.png">you share communism</a>! ;)</p>
     <hr />
     <footer>
-      <script src="/footer.js"></script>
-      <noscript><div><iframe id="bottom" name="bottom" src="/footer.html"></iframe></div></noscript>
-      <a id="navfix" href="/nav.html">navigation if your browser has faulty iframe support</a>
+      <script src="/~job/footer.js"></script>
+      <noscript><div><iframe id="bottom" name="bottom" src="/~job/footer.html"></iframe></div></noscript>
+      <a id="navfix" href="/~job/nav.html">navigation if your browser has faulty iframe support</a>
     </footer>
   </body>
 </html>
