--- a/footer.html
+++ b/footer.html
@@ -8,16 +8,16 @@
   <base target="_parent">
  </head>
  <body>
-  <a href="/" title="Return to main page"><img src="/home.svg" alt="Return to main page" /></a><br />
+  <a href="/~job/" title="Return to main page"><img src="/~job/home.svg" alt="Return to main page" /></a><br />
   <div>
    <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Frw.rs%2F~job%2Findex.css&profile=css3svg&usermedium=all&warning=2&vextwarning=&lang=en" title="index.css valid!">
-   <img style="border:0;width:120px;height:42px" src="/cssvalidated.svg" alt="Valid CSS!" />
+   <img style="border:0;width:120px;height:42px" src="/~job/cssvalidated.svg" alt="Valid CSS!" />
    </a>
    <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Frw.rs%2F~job%2Flight.css&profile=css3svg&usermedium=all&warning=2&vextwarning=&lang=en" title="light.css valid!">
-   <img style="border:0;width:120px;height:42px" src="/cssvalidated2.svg" alt="Valid CSS!" />
+   <img style="border:0;width:120px;height:42px" src="/~job/cssvalidated2.svg" alt="Valid CSS!" />
    </a>
    <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Frw.rs%2F~job%2Fdark.css&profile=css3svg&usermedium=all&warning=2&vextwarning=&lang=en" title="dark.css valid!">
-   <img style="border:0;width:120px;height:42px" src="/cssvalidated2.svg" alt="Valid CSS!" />
+   <img style="border:0;width:120px;height:42px" src="/~job/cssvalidated2.svg" alt="Valid CSS!" />
    </a>
   </div>
  </body>
