--- a/not_found.html
+++ b/not_found.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Page Not Found</title>
-    <link href="/index.css" rel="stylesheet" type="text/css" media="all">
-    <link href="/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
-    <link href="/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
-    <link rel="top" href="/" title="Job Bautista's personal website">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link href="/~job/index.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/~job/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
+    <link href="/~job/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
+    <link rel="top" href="/~job/" title="Job Bautista's personal website">
+    <link rel="icon" type="image/x-icon" href="/~job/favicon.ico">
   </head>
   <body>
     <div class="txtcenter">
@@ -17,7 +17,7 @@
     </div>
     <hr />
     <footer>
-    <iframe id="bottom" name="bottom" src="/footer.html"></iframe>
+    <iframe id="bottom" name="bottom" src="/~job/footer.html"></iframe>
     </footer>
   </body>
 </html>
