--- a/writings/everything2/palengke.html
+++ b/writings/everything2/palengke.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palengke - Job Bautista</title>
-    <link href="/index.css" rel="stylesheet" type="text/css" media="all">
-    <link href="/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
-    <link href="/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="top" href="/" title="Job Bautista's personal website">
+    <link href="/~job/index.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/~job/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
+    <link href="/~job/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
+    <link rel="icon" type="image/x-icon" href="/~job/favicon.ico">
+    <link rel="top" href="/~job/" title="Job Bautista's personal website">
     <link rel="up" href="./" title=">Some of my best writeups in Everything2 - Job Bautista">
   </head>
   <body>
     <header>
-      <script src="/nav.js"></script>
-      <noscript><iframe id="top" name="top" src="/nav.html"></iframe></noscript>
+      <script src="/~job/nav.js"></script>
+      <noscript><iframe id="top" name="top" src="/~job/nav.html"></iframe></noscript>
     </header>
     <hr />
     <h1>Palengke</h1>
@@ -30,13 +30,13 @@
 
     <p>Though the <em>palengke</em> has long been part of <a href="https://everything2.com/title/Filipino+culture">Filipino culture</a>, it is criticized as being <a href="https://everything2.com/title/sanitation">unsanitary</a>, <a href="https://everything2.com/title/obsolete">obsolete</a>, and hindering <a href="https://everything2.com/title/modernization">modernization</a>, which is why the <em>palengke</em> is often connected to <a href="https://everything2.com/title/poverty">poverty</a>. Recently, it is being challenged by the more <a href="https://everything2.com/title/commercial">commericalized</a> <a href="https://everything2.com/title/supermarket">supermarkets</a> and shopping <a href="https://everything2.com/title/mall">malls</a> and <a href="https://everything2.com/title/shopping+center">centers</a>. Supporters of the <em>palengke</em> argue that it can't be removed from Filipino culture, and that the <em>palengke</em> instilled a sense of <a href="https://everything2.com/title/community">community</a> which the more "<a href="https://everything2.com/title/modern">modern</a>" alternatives can't replicate. <a href="https://everything2.com/title/In+my+opinion">In my opinion</a>, as long as poverty and <a href="https://everything2.com/title/conservatism">conservatism</a> remains, the concept of <em>palengke</em> will not be obsolete, and <a href="https://everything2.com/title/future-proof">it will live on for more generations to come</a>. <em><a href="https://everything2.com/title/Filipino+life">Parte na yan ng buhay.</a></em></p>
     
-    <p><a rel="up" href="/writings/everything2">Back to my e2 writeups</a></p>
+    <p><a rel="up" href="/~job/writings/everything2">Back to my e2 writeups</a></p>
     <hr />
     <footer>
       <a href="https://everything2.com/user/pandakekok9/writeups/palengke" title="Originally published in Everything2"><img src="everything2_logo.png" alt="Originally published in Everything2" /></a><br />
-      <script src="/footer.js"></script>
-      <noscript><div><iframe id="bottom" name="bottom" src="/footer.html"></iframe></div></noscript>
-      <a id="navfix" href="/nav.html">navigation if your browser has faulty iframe support</a>
+      <script src="/~job/footer.js"></script>
+      <noscript><div><iframe id="bottom" name="bottom" src="/~job/footer.html"></iframe></div></noscript>
+      <a id="navfix" href="/~job/nav.html">navigation if your browser has faulty iframe support</a>
     </footer>
   </body>
 </html>
