--- a/writings/yoke.html
+++ b/writings/yoke.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yoke, a poem by Job Bautista</title>
-    <link href="/index.css" rel="stylesheet" type="text/css" media="all">
-    <link href="/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
-    <link href="/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
-    <link rel="top" href="/" title="Job Bautista's personal website">
+    <link href="/~job/index.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/~job/light.css" rel="stylesheet" type="text/css" media="all" title="Light mode">
+    <link href="/~job/dark.css" rel="alternate stylesheet" type="text/css" media="all" title="Dark mode">
+    <link rel="top" href="/~job/" title="Job Bautista's personal website">
     <link rel="up" href="./" title="Job Bautista's writings">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/~job/favicon.ico">
   </head>
   <body>
     <header>
-      <script src="/nav.js"></script>
-      <noscript><iframe id="top" name="top" src="/nav.html"></iframe></noscript>
+      <script src="/~job/nav.js"></script>
+      <noscript><iframe id="top" name="top" src="/~job/nav.html"></iframe></noscript>
     </header>
     <hr />
     <h1>Yoke</h1>
@@ -50,9 +50,9 @@
     </div>
     <hr />
     <footer>
-      <script src="/footer.js"></script>
-      <noscript><div><iframe id="bottom" name="bottom" src="/footer.html"></iframe></div></noscript>
-      <a id="navfix" href="/nav.html">navigation if your browser has faulty iframe support</a>
+      <script src="/~job/footer.js"></script>
+      <noscript><div><iframe id="bottom" name="bottom" src="/~job/footer.html"></iframe></div></noscript>
+      <a id="navfix" href="/~job/nav.html">navigation if your browser has faulty iframe support</a>
     </footer>
   </body>
 </html>
