forgot the css validated icons

--- a/infographics/chemical-elements/lithium.html
+++ b/infographics/chemical-elements/lithium.html
@@ -101,8 +101,8 @@
       <h3 class="title">Navigate to:</h3>
        <p><a href="helium.html" rel="prev">&#60;&#8208;&#8208; Helium</a> &emsp; <a href="Beryllium.html" rel="next">Beryllium &#8208;&#8208;&#62;</a></p>
      </section>
-     <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Frw.rs%2F~job%2Finfographics%2Fchemical-elements%2Fcss%2Finfographic.css&profile=css3svg&usermedium=all&warning=2&vextwarning=&lang=en" target="_parent" title="infographic.css valid!"><img style="border:0;width:120px;height:42px" src="/cssvalidated.svg" alt="infographic.css valid!" /></a>
-     <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Frw.rs%2F~job%2Finfographics%2Fchemical-elements%2Fcss%2Freset.css&profile=css3svg&usermedium=all&warning=2&vextwarning=&lang=en" target="_parent" title="reset.css valid!"><img style="border:0;width:120px;height:42px" src="/cssvalidated2.svg" alt="reset.css valid!" /></a>
+     <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Frw.rs%2F~job%2Finfographics%2Fchemical-elements%2Fcss%2Finfographic.css&profile=css3svg&usermedium=all&warning=2&vextwarning=&lang=en" target="_parent" title="infographic.css valid!"><img style="border:0;width:120px;height:42px" src="/~job/cssvalidated.svg" alt="infographic.css valid!" /></a>
+     <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Frw.rs%2F~job%2Finfographics%2Fchemical-elements%2Fcss%2Freset.css&profile=css3svg&usermedium=all&warning=2&vextwarning=&lang=en" target="_parent" title="reset.css valid!"><img style="border:0;width:120px;height:42px" src="/~job/cssvalidated2.svg" alt="reset.css valid!" /></a>
     </footer>
    </div>
   </article>
