prefers-color-scheme support

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   </head>
   <body>
     <header>
-      <script src="/~job/nav.js"></script>
-      <noscript><iframe id="top" name="top" src="/~job/nav.html"></iframe></noscript>
+      <iframe id="top" name="top" src="/~job/nav.html"></iframe>
     </header>
     <hr />
     <h1>Welcome to my Website!</h1>
