--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,7 @@
   </head>
   <body>
     <header>
-      <script src="/~job/nav.js"></script>
-      <noscript><iframe id="top" name="top" src="/~job/nav.html"></iframe></noscript>
+      <iframe id="top" name="top" src="/~job/nav.html"></iframe>
     </header>
     <hr />
     <h1>Contact</h1>
