Listing of writings update
Enclosed titles of writings into <cite>
Turn e2 listings into true list

--- a/writings/everything2/index.html
+++ b/writings/everything2/index.html
@@ -15,10 +15,12 @@
     </header>
     <hr />
     <h1>Some of my best writeups in Everything2</h1>
-      <p><a href="idealwifimall.html">Ideal Wi-Fi Mall</a> - my rant about the <a href="https://en.wikipedia.org/wiki/Wi-Fi">Wi-Fi</a> interference in malls.</p>
-      <p><a href="cyndaquil.html">Cyndaquil</a> - a short overview about <a href="https://bulbapedia.bulbagarden.net/wiki/Cyndaquil">Cyndaquil</a>, my favorite Pokemon</p>
-      <p><a href="palengke.html">Palengke</a> - a description of the local markets in the <a href="https://en.wikipedia.org/wiki/Philippines">Philippines</a></p>
-      <p><a href="martsangbayan.html">Martsa ng Bayan</a> - a review of the 1980s <a href="https://en.wikipedia.org/wiki/Martial_law_in_the_Philippines">martial law</a> song</p>
+     <ul>
+      <li><cite><a href="idealwifimall.html">Ideal Wi-Fi Mall</a></cite> - my rant about the <a href="https://en.wikipedia.org/wiki/Wi-Fi">Wi-Fi</a> interference in malls.</li>
+      <li><cite><a href="cyndaquil.html">Cyndaquil</a></cite> - a short overview about <a href="https://bulbapedia.bulbagarden.net/wiki/Cyndaquil">Cyndaquil</a>, my favorite Pokemon</li>
+      <li><cite><a href="palengke.html">Palengke</a></cite> - a description of the local markets in the <a href="https://en.wikipedia.org/wiki/Philippines">Philippines</a></li>
+      <li><cite><a href="martsangbayan.html">Martsa ng Bayan</a></cite> - a review of the 1980s <a href="https://en.wikipedia.org/wiki/Martial_law_in_the_Philippines">martial law</a> song</li>
+     </ul>
     <hr />
     <footer>
       <script src="/~job/footer.js"></script>
