more hyperlinks for notprogrammer-freesw.html

--- a/writings/notprogrammer-freesw.html
+++ b/writings/notprogrammer-freesw.html
@@ -33,11 +33,11 @@
       <p>Software freedom is <a href="https://en.wikipedia.org/wiki/Nonpartisanism">nonpartisan</a>. It may even help in uniting us in the basis of humanity, rather than dividing ourselves in petty differences.</p>
       <p>Speaking of privacy...</p>
      <h2>You want to maintain your privacy</h2>
-      <p>A number of people have become more privacy-conscious after Edward Snowden revealed the huge network of global surveillance by the U.S. National Security Agency. Privacy has never been more important than ever.</p>
+      <p>A number of people have become more privacy-conscious after <a href="https://en.wikipedia.org/wiki/Edward_Snowden">Edward Snowden</a> revealed the huge network of global surveillance by the U.S. National Security Agency. Privacy has never been more important than ever.</p>
       <p>The first step to regain back your privacy is to use free software, and only free software. Why? Because free software allows you to verify via source code whether that software truly does respect your privacy. You can't do the verification yourself? Let your friend, as well as a community of vigilant programmers do the job for you.</p>
       <p>There have been several revelations of proprietary software violating your privacy, with the Windows operating system being the most notorious. I will let you search them yourself. What about free software? Very rare. And if there were, they're most likely unintentional, and quickly fixed. If intentional or not fixed, the software is forked. You can't do this in proprietary software.</p>
      <h2>Government transparency</h2>
-      <p>Transparency in government is very important. If your government depends on proprietary software, they can't be transparent, even if they want to. The people loses, because they can't audit the government they elected. You need to emphasize the importance of free software, for the sake of your country.</p>
+      <p><a href="https://en.wikipedia.org/wiki/Open_government">Transparency in government</a> is very important. If your government depends on proprietary software, they can't be transparent, even if they want to. The people loses, because they can't audit the government they elected. You need to emphasize the importance of free software, for the sake of your country.</p>
       <p>Free software prevents these problems. And as a bonus, it's cheaper for the government too, allowing them to spend the savings on other public projects.</p>
     <hr />
     <footer>
