add link to website's source code in git

--- a/footer.html
+++ b/footer.html
@@ -20,5 +20,6 @@
    <img style="border:0;width:120px;height:42px" src="/~job/cssvalidated2.svg" alt="Valid CSS!" />
    </a>
   </div>
+  <a href="https://github.com/jobbautista9/website">Website's source code in git</a>
  </body>
 </html>
