--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="/~job/index.css" rel="stylesheet" type="text/css" media="all">
     <link rel="icon" type="image/x-icon" href="/~job/favicon.ico">
     <link rel="top" href="/~job/" title="Job Bautista's personal website">
+    <link rel="canonical" href="http://rw.rs/~job/">
   </head>
   <body>
     <header>
