--- a/infographics/chemical-elements/index.html
+++ b/infographics/chemical-elements/index.html
@@ -8,6 +8,7 @@
     <link rel="top" href="/~job/" title="Job Bautista's personal website">
     <link rel="up" href="/~job/" title="Job Bautista's personal website">
     <link rel="icon" type="image/x-icon" href="/~job/favicon.ico">
+    <link rel="canonical" href="http://rw.rs/~job/writings/infographics/chemical-elements/">
   </head>
   <body>
     <header>
