--- a/writings/everything2/index.html
+++ b/writings/everything2/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/~job/favicon.ico">
     <link rel="top" href="/~job/" title="Job Bautista's personal website">
     <link rel="up" href="/~job/writings" title="Job Bautista's writings">
+    <link rel="canonical" href="http://rw.rs/~job/writings/everything2/">
   </head>
   <body>
     <header>
