rely on local instead of 0x0 for torrent file

--- a/writings/sineprogresibo.html
+++ b/writings/sineprogresibo.html
@@ -39,7 +39,7 @@
      <li>2018 - Pagkatapos Ng Tigkiriw (dir. Danielle Madrid).mp4 (<a href="https://0x0.st/-Ana.mp4">Alternative non-torrent download link</a>)</li>
     </ol>
     <p>Total file size of all videos combined is 12.9 gibibytes (13,867,844,173 bytes).</p>
-    <p>Download this <a href="https://0x0.st/-Adv.torrent">torrent file</a> or use this <a href="magnet:?xt=urn:btih:3a7ae37d1b439a5d02818062c0d6fd7e6bdde504&dn=SineProgresibo">magnet link</a> and start torrenting using your favorite torrent client. Don't forget to seed to at least 2.0 ratio after downloading. Remember, when you share data, <a href="http://libcom.org/files/downloading-communism.png">you share communism</a>! ;)</p>
+    <p>Download this <a href="/~job/outgoing/pub/SineProgresibo.torrent">torrent file</a> or use this <a href="magnet:?xt=urn:btih:3a7ae37d1b439a5d02818062c0d6fd7e6bdde504&dn=SineProgresibo">magnet link</a> and start torrenting using your favorite torrent client. Don't forget to seed to at least 2.0 ratio after downloading. Remember, when you share data, <a href="http://libcom.org/files/downloading-communism.png">you share communism</a>! ;)</p>
     <hr />
     <footer>
       <script src="/~job/footer.js"></script>
