Update contact to include IRC

--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
       <li><a href="mailto:temtem@protonmail.ch">temtem@protonmail.ch</a> (If you have problems with "temtemy")</li>
       <li><a href="mailto:jobbautista9@aol.com">jobbautista9@aol.com</a> (For Pale Moon and UXP matters)</li>
     </ul>
+    <p>Or via <a href="https://libera.chat">libera</a> or tildeverse IRC. My NickServ for both networks is job. You will usually find me on libera as "pandakekok9", and on tildeverse as "job".</p>
     <p>All hate mail goes to /dev/null.</p>
     <hr />
     <footer>
