--- a/wheretofindme.html
+++ b/wheretofindme.html
@@ -19,6 +19,7 @@
           <ul>
             <li><a href="https://www.facebook.com/ajob09">Facebook</a>
             <li><a href="https://twitter.com/jobbautista9">Twitter</a>
+            <li><a rel="me" href="https://tilde.zone/@job">Mastodon</a>
           </ul>
     
         <h2>Git repos</h2>
